商品微服务，用户微服务，订单微服务的实现

--- a/pom.xml
+++ b/pom.xml
@@ -12,9 +12,12 @@
     <packaging>pom</packaging>
 
     <modules>
+        <module>common</module>
         <module>shop-product</module>
         <module>shop-order</module>
         <module>shop-user</module>
+        <module>renren-fast</module>
+        <module>renren-generator</module>
     </modules>
 
 
